# neural-nets-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
neural_nets_from_scratch/: .gitignore  activation_function.py  layer.py  main.py  model.py  utils.py
