[tool.poetry]
name = "neural-nets-from-scratch"
version = "0.1.0"
description = ""
authors = ["Marios Hadjiantonis <marios.hadjiantonis@truecaller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
