[tool.poetry]
name = "neural-nets-from-scratch"
version = "0.1.0"
description = "Educational neural network framework in pure Python/NumPy, featuring custom layers, activations, and MNIST training from scratch."
authors = ["Marios Hadjiantonis <mhadjiantonis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
